--- a/.gitignore
+++ b/.gitignore
@@ -31,11 +31,12 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
 
 # typescript
 *.tsbuildinfo
 
-# Firebase & Google Service Configs (Sensitive)
+# Firebase
 .firebase/
 
 app-example
