--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "base-64": "^1.0.0",
     "expo": "~52.0.37",
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
@@ -51,6 +52,7 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.27.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@types/base-64": "^1.0.2",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
